@@ -14,6 +14,8 @@
 #    include "../../../entity/Guest.h"
 #    include "ScPeep.hpp"
 
+enum class PeepActionSpriteType : uint8_t;
+
 namespace OpenRCT2::Scripting
 {
     static const DukEnumMap<ShopItem> ShopItemMap({
@@ -172,6 +174,14 @@ namespace OpenRCT2::Scripting
         void give_item(const DukValue& item) const;
         void remove_item(const DukValue& item) const;
         void remove_all_items() const;
+
+        std::vector<std::string> availableAnimations_get() const;
+        std::vector<uint32_t> getAnimationSpriteIds(std::string groupKey, uint8_t rotation) const;
+        std::string animation_get() const;
+        void animation_set(std::string groupKey);
+        uint8_t animationOffset_get() const;
+        void animationOffset_set(uint8_t offset);
+        uint8_t animationLength_get() const;
     };
 
 } // namespace OpenRCT2::Scripting
