@@ -15,6 +15,9 @@
 
 #    include <memory>
 
+enum class PeepActionSpriteType : uint8_t;
+enum class StaffType : uint8_t;
+
 namespace OpenRCT2::Scripting
 {
     class ScPatrolArea
@@ -64,6 +67,15 @@ namespace OpenRCT2::Scripting
 
         uint8_t orders_get() const;
         void orders_set(uint8_t value);
+
+        const DukEnumMap<PeepActionSpriteType>& animationsByStaffType(StaffType staffType) const;
+        std::vector<uint32_t> getAnimationSpriteIds(std::string groupKey, uint8_t rotation) const;
+        std::vector<std::string> availableAnimations_get() const;
+        std::string animation_get() const;
+        void animation_set(std::string groupKey);
+        uint8_t animationOffset_get() const;
+        void animationOffset_set(uint8_t offset);
+        uint8_t animationLength_get() const;
     };
 
 } // namespace OpenRCT2::Scripting
